test/org/midica/testfiles/failing/include-soundbank-inside-function.midica
INCLUDE inc/instruments.midica

0 c /4

FUNCTION test
	SOUNDBANK ../working/java-emergency-soundfont.sf2
END
